# bazel-sandbox

./: .gitignore  BUILD.bazel  MODULE.bazel  requirements_lock.txt
packaging/: BUILD.bazel  MODULE.bazel  defs.bzl
packaging/data/: foo.txt
packaging/src/: core.cc  core.hh  main.cc
runfiles/: BUILD.bazel  README.md  defs.bzl
runfiles/src/: Main.java  main.cc
src/: BUILD.bazel  Main.java  main.cc  main.py  main.rs
testing/: BUILD.bazel  MODULE.bazel  requirements_lock.txt  test_logging.py
