load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_rust//rust:defs.bzl", "rust_binary")

cc_binary(
    name = "prog_cc",
    srcs = ["main.cc"],
    data = ["//data:foo.txt"],
    deps = ["@rules_cc//cc/runfiles"],
)

java_binary(
    name = "prog_java",
    srcs = ["Main.java"],
    main_class = "org.ros.Main",
    data = ["//data:foo.txt"],
    deps = ["@rules_java//java/runfiles"],
)

py_binary(
    name = "prog_py",
    main = "main.py",
    srcs = ["main.py"],
    data = ["//data:foo.txt"],
    deps = ["@rules_python//python/runfiles"],
)

rust_binary(
    name = "prog_rs",
    srcs = ["main.rs"],
    data = ["//data:foo.txt"],
    deps = ["@rules_rust//rust/runfiles"],
)