module(
    name = "testing",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.3.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
    ignore_root_user_error = True,
)
use_repo(python, "python_3_12", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_testing",
    python_version = "3.12",
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pip_testing")
